# mail-auth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pages.yml  rust.yml
examples/: arc_seal.rs  arc_verify.rs  dkim_sign.rs  dkim_verify.rs  dmarc_verify.rs  iprev_verify.rs  report_arf_generate.rs  report_arf_parse.rs  report_dmarc_generate.rs  report_dmarc_parse.rs  spf_verify.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mail_auth.rs
resources/: rsa-private.pem
resources/arc/: 001.txt  002.txt
resources/arf/: 001.json  002.json  003.json  004.json  005.json
resources/dkim/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt
resources/dkim2/: cases.json  dns.json
resources/dkim2/emails/: dupheaders.eml  emptybody.eml  multiheader.eml  multirecipient.eml  simple.eml  trailingblank.eml
resources/dkim2/expected/: algorithm_misnamed.eml  algorithm_no_signature.eml  algorithm_only_future.eml  algorithm_with_future.eml  d2_duplicate_d_tag.eml  d2_duplicate_f_tag.eml  d2_duplicate_i_tag.eml  d2_duplicate_m_tag.eml  d2_duplicate_mf_tag.eml  d2_duplicate_n_tag.eml  d2_duplicate_rt_tag.eml  d2_duplicate_s_tag.eml  d2_duplicate_t_tag.eml  domain_above_mailfrom.eml  domain_below_mailfrom.eml  dsn-ed25519.eml  dupheaders-ed25519.eml  emptybody-ed25519.eml  flags_whitespace.eml  interop_brong_chain_hop1.eml  interop_brong_chain_hop2.eml  interop_brong_chain_hop3.eml  interop_brong_chain_hop4.eml  interop_brong_chain_hop5.eml  interop_brong_chain_hop6.eml  interop_brong_milter_originator.eml  mailfrom_case.eml  mailfrom_empty.eml  mailfrom_needs_brackets.eml  multiheader-ed25519.eml  multihop-3hop-dup-headers.eml  multihop-body-footer.eml  multihop-dup-headers.eml  multihop-header-add.eml  multihop-header-replace.eml  multirecipient-ed25519.eml  nonce_empty.eml  nonce_sneaky.eml  nonce_too_long.eml  nonce_valid.eml  (+23 more)
resources/dkim2/keys/: ed25519._domainkey.test1.dkim2.com.pem  ed25519._domainkey.test2.dkim2.com.pem  ed25519._domainkey.test3.dkim2.com.pem  ed25519._domainkey.test4.dkim2.com.pem  ed25519._domainkey.test5.dkim2.com.pem  rsa1024._domainkey.test1.dkim2.com.pem  sel1._domainkey.test1.dkim2.com.pem  sel2._domainkey.test1.dkim2.com.pem  sel3._domainkey.test1.dkim2.com.pem
resources/dmarc-agg-report/: 001.xml
resources/dmarc-feedback/: 001.json  001.xml  002.json  002.xml  003.json  003.xml  004.json  005.json  005.xml  100.json  101.json  102.json  103.json  104.json
resources/schemas/: dmarc-draft.xsd  dmarc-rfc7489.xsd
resources/spf/: a.yml  all.yml  basic.yml  examples.yml  exists.yml  exp.yml  include.yml  ip.yml  macro.yml  mx.yml  ptr.yml  redirect.yml
resources/tlsrpt/: rpt01.json  rpt02.json  rpt03.json
src/: lib.rs
src/arc/: builder.rs  headers.rs  mod.rs  parse.rs  seal.rs  verify.rs
src/common/: auth_results.rs  base32.rs  cache.rs  crypto.rs  doh.rs  headers.rs  lru.rs  message.rs  mod.rs  parse.rs  resolver.rs  verify.rs
src/common/crypto/: mod.rs  ring_impls.rs  rust_crypto.rs
src/dkim/: builder.rs  canonicalize.rs  generate.rs  headers.rs  mod.rs  parse.rs  sign.rs  streaming.rs  verify.rs
src/dkim2/: builder.rs  canonicalize.rs  dsn.rs  headers.rs  interop_test.rs  mod.rs  parse.rs  recipe.rs  recipe_serializer.rs  sign.rs  verify.rs
src/dmarc/: mod.rs  parse.rs  verify.rs
src/mta_sts/: mod.rs  parse.rs
src/report/: agg_parse.rs  mod.rs
src/report/arf/: generate.rs  mod.rs  parse.rs
src/report/dmarc/: generate.rs  mod.rs  parse.rs
src/report/feedback/: generate.rs  mod.rs  parse.rs
src/report/tlsrpt/: generate.rs  mod.rs  parse.rs
src/spf/: macros.rs  mod.rs  parse.rs  verify.rs
tests/: dmarc_live.rs
web/: Cargo.toml  README.md  build.rs  build.sh
web/site/: app.js  index.html  style.css
web/src/: cache.rs  keys.rs  lib.rs  sign.rs  verify.rs
