[package]
name = "mail-auth"
description = "DKIM, ARC, SPF and DMARC library for Rust"
version = "0.3.7"
edition = "2021"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-auth"
homepage = "https://github.com/stalwartlabs/mail-auth"
keywords = ["dkim", "dmarc", "spf", "arc", "mail"]
categories = ["email", "authentication"]
readme = "README.md"
resolver = "2"

[lib]
doctest = false

[features]
default = ["ring", "rustls-pemfile"]
rust-crypto = ["ed25519-dalek", "rsa", "sha1", "sha2"]
test = []

[dependencies]
ahash = "0.8.0"
ed25519-dalek = { version = "2.0", optional = true }
flate2 = "1.0.25"
lru-cache = "0.1.2"
mail-parser = { version = "0.9", features = ["ludicrous_mode", "full_encoding"] }
mail-builder = { version = "0.3", features = ["ludicrous_mode"] }
parking_lot = "0.12.0"
quick-xml = "0.31"
ring = { version = "0.17", optional = true }
rsa = { version = "0.7", optional = true }
rustls-pemfile = { version = "2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = { version = "0.10", features = ["oid"], optional = true }
sha2 = { version = "0.10.6", features = ["oid"], optional = true }
hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dnssec-ring"] }
zip = "0.6.3"

[dev-dependencies]
tokio = { version = "1.16", features = ["net", "io-util", "time", "rt-multi-thread", "macros"] }
rustls-pemfile = "2"
